# arbitraje

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: aggregator.rs  execution.rs  main.rs
backend/src/arbitrage/: detector.rs  mod.rs
backend/src/exchanges/: binance.rs  bybit.rs  extended.rs  hyperliquid.rs  mod.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
src/: aggregator.rs  main.rs
src/arbitrage/: detector.rs  mod.rs
src/exchanges/: binance.rs  hyperliquid.rs  mod.rs
