[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dashmap = "6"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
async-trait = "0.1"
url = "2"
