[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"

# Estructuras de datos
dashmap = "5.5"

# Web Server (Warp usa http 0.2)
warp = "0.3"

# Clientes HTTP/WS (Forzamos versiones compatibles con http 0.2)
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

csv = "1.3"
serde = { version = "1.0", features = ["derive"] }