[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Logging & Errores
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

# Datos y Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"  # <--- Esta es la nueva para el Historial

# Web Server & HTTP
warp = "0.3"
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.2"

# Estructuras de datos
dashmap = "5.5"
chrono = "0.4"

dotenv = "0.15"